# omnetpp-osg-replacement

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md
docs/: 01-dependency-inventory.md  02-architecture.md  03-roadmap.md  04-capability-mapping.md  05-geospatial.md  06-risks-and-decisions.md  07-plan-review.md  INSTALL_DEPENDENCIES.md
impl/: APPLIED.md  README.md  STATUS.md
impl/changes/: inet-oppfeatures-visualizationusd.md  iosgviewer.cc.as-built  m0-cenvir-refscenenode.md  m0-cosgcanvas-neutral.md  m1-configure-usd.md  m1-makefileinc-qtenv.md  m2-iosgviewer-loader.md
impl/spike/: CMakeLists.txt  README.md  main.cpp  main.mm
impl/tree/include/omnetpp/: scene3dnode.h
impl/tree/samples/inet-4.6.0/src/inet/visualizer/usd/util/: UsdScene.cc  UsdScene.h  UsdUtils.cc  UsdUtils.h
impl/tree/samples/usd-intro/: TokenNode.cc  UsdIntro.ned  UsdScene.cc  makefrag  omnetpp.ini
impl/tree/src/qtenv/usd/: Makefile  cameracontrollers.cc  cameracontrollers.h  stagecache.cc  stagecache.h  usd.msg  usdpresent_metal.mm  usdscenehandle.h  usdviewer.cc  usdviewer.h
